# research-model

./: .gitignore  README.md  app.py  broswer_mcp.json  config.py  pyproject.toml  requirements.txt
agent/: mcp_agent.py  streaming.py
routes/: chat.py  system.py
static/css/: custom.css
static/js/: app.js
templates/: 404.html  500.html  base.html  index.html  sessions.html  settings.html
templates/partials/: context_panel.html  tool_viewer.html  topbar.html
utils/: session_manager.py
